# Dua

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Compiler.cpp  Compiler.h  EvaLLVM.h  Expression.h  Grammar.bnf  Operations.cpp  Parser.h  README.md  SymbolTable.h  main.cpp
.github/workflows/: ubuntu.yml
Antlr4/cmake/: FindANTLR.cmake
examples/: If-statements.dua  algorithms.dua  arrays.dua  block-expression.dua  casting.dua  class-construction.dua  class-definition.dua  classid-operator.dua  conditionals.dua  construct-operator.dua  copying.dua  destruct-operator.dua  dynamic-allocation.dua  dynamic-casting.dua  dynamicname-operator.dua  function-overloading.dua  function-reference.dua  functions.dua  generic-classes.dua  generic-functions.dua  heap.dua  if-expressions.dua  if-statements.dua  infinite-loops.dua  infix-operators.dua  inheritance.dua  istype-operator.dua  loops.dua  move-operator.dua  noref-operator.dua  offsetof-operator.dua  postfix-operators.dua  preprocessor.dua  priority-queue.dua  scopes.dua  set-vtable-operator.dua  sizeof-operator.dua  string.dua  teleport-operator.dua  temp-objects.dua  (+11 more)
examples/import-files/: outputs-123.dua  returns-10.dua
grammar/: DuaLexer.g4  DuaParser.g4  LLVMExampleLexer.g4  LLVMExampleParser.g4
include/: Compiler.h  Expression.h  FunctionInfo.h  ModuleCompiler.h  ModuleCompiler.hpp  NameResolver.hpp  Parser.h  ParserAssistant.h  Preprocessor.hpp  SymbolTable.h  SymbolTable.hpp  TypingSystem.hpp  Utils.h  Value.hpp
include/AST/: ASTNode.h  ASTNode.hpp  AssignmentExpressionNode.h  AssignmentExpressionNode.hpp  AssignmentNode.h  Block.h  BlockNode.h  BlockNode.hpp  ClassDefinitionNode.h  CompoundAssignmentExpressionNode.h  CompoundAssignmentExpressionNode.hpp  DeferredActionNode.h  DeferredActionNode.hpp  ExpressionStatementNode.h  ExpressionStatementNode.hpp  FreeNode.h  FreeNode.hpp  FunctionCallNode.h  FunctionDefinitionNode.h  FunctionNodeBase.h  GlobalVariableDefinitionNode.h  IfNode.h  IfNode.hpp  IndexingNode.hpp  LLMVValueNode.h  LLMVValueNode.hpp  LocalVariableDefinitionNode.h  NoDeleteWrapperNode.h  OpAssignExpressionNode.h  ScopeTeleportingNode.hpp  SequentialEvalNode.h  SequentialEvalNode.hpp  SizeOfNode.h  SizeOfNode.hpp  StaticValueNode.hpp  TempObjectNode.hpp  TempVariableNode.hpp  TranslationUnitNode.h  TranslationUnitNode.hpp  WhileNode.h  (+1 more)
include/AST/binary/: ArithmeticNodes.h  ArithmeticNodes.hpp  BinaryExp.h  BinaryExp.hpp  BitManipulationNodes.h  BitManipulationNodes.hpp  ComparisonNodes.h  (+1 more)
include/parsing/: Parser.h  ParserAssistant.h  ParserAssistant.hpp  ParserAssistantStack.h  ParserFacade.h  ParserFacade.hpp
include/resolution/: ClassResolver.hpp  CommonStructs.hpp  FunctionNameResolver.hpp  IdentityResolutionString.hpp  MethodNameResolutionString.hpp  NameResolver.hpp  ResolutionString.hpp  TemplatedNameResolver.hpp
include/types/: ArrayType.h  ArrayType.hpp  ClassType.h  ClassType.hpp  FloatTypes.h  FloatTypes.hpp  FunctionType.h  FunctionType.hpp  IdentifierType.hpp  IntegerTypes.h  IntegerTypes.hpp  NoRefType.hpp  NonConcreteType.hpp  NullType.hpp  PointerType.h  PointerType.hpp  ReferenceType.hpp  StringType.h  StringType.hpp  Type.h  Type.hpp  TypeBase.h  TypeOfType.hpp  VoidType.h  VoidType.hpp
include/utils/: CodeGeneration.h  CodeGeneration.hpp  ErrorReporting.h  ErrorReporting.hpp  ProgramExecution.h  ProgramExecution.hpp  TextManipulation.h  TextManipulation.hpp  VectorOperators.h
lib/: algorithms.dua  build.bat  build.sh  c.dua  common.c  execution.dua  globals.dua  heap.dua  io.dua  priority-queue.dua  random.dua  string.dua  vector.dua
projects/Dijkstra/: Dijkstra.dua  main.dua
projects/SudokuSolver/: SudokuSolver.dua  main.dua
scripts/: build.bat  build.sh  build_lib.bat  build_lib.sh  install.bat  install.sh
src/: Compiler.cpp  ModuleCompiler.cpp  NameResolver.cpp  Operations.cpp  Parser.cpp  ParserAssistant.cpp  ParserFacade.cpp  Preprocessor.cpp  TypingSystem.cpp  Utils.cpp  Value.cpp
src/AST/: ASTNode.cpp  AddressNode.cpp  ArrayIndexingNode.cpp  ArrayType.cpp  AssignmentNode.cpp  Block.cpp  BlockNode.cpp  CastExpressionNode.cpp  ClassDefinitionNode.cpp  ClassFieldDefinitionNode.cpp  ClassFieldNode.cpp  ClassIDNode.cpp  DereferenceNode.cpp  DoWhileNode.cpp  DynamicCastNode.cpp  DynamicNameNode.cpp  ExprFunctionCallNode.cpp  ForNode.cpp  FreeNode.cpp  FunctionCallNode.cpp  FunctionDefinitionNode.cpp  FunctionRefNode.cpp  GlobalVariableDefinitionNode.cpp  IfNode.cpp  IndexingNode.cpp  LoadedLValueNode.cpp  LocalVariableDefinitionNode.cpp  MallocNode.cpp  MethodCallNode.cpp  NumericalUnaryExpressionNodes.cpp  PointerType.cpp  PostfixAdditionExpressionNode.cpp  PrefixAdditionExpressionNode.cpp  ReturnNode.cpp  StringValueNode.cpp  TempObjectNode.cpp  TempVariableNode.cpp  TypeNameNode.cpp  VariableNode.cpp  WhileNode.cpp
src/parsing/: ParserAssistant.cpp  ParserFacade.cpp
src/resolution/: ClassResolver.cpp  FunctionNameResolver.cpp  MethodNameResolutionString.cpp  NameResolver.cpp  TemplatedNameResolver.cpp
src/types/: ArrayType.cpp  ClassType.cpp  FunctionType.cpp  IdentifierType.cpp  PointerType.cpp  ReferenceType.cpp  Type.cpp  TypeOfType.cpp
src/utils/: CodeGeneration.cpp  ErrorReporting.cpp  ProgramExecution.cpp  TextManipulation.cpp  VectorOperations.cpp
testing/: CMakeLists.txt
testing/tests/: Algorithms.cpp  Arrays.cpp  BlockExpression.cpp  CMakeLists.txt  Casting.cpp  ClassConstruction.cpp  ClassDefinition.cpp  ClassIDOperator.cpp  Conditionals.cpp  ConstructOperator.cpp  Copying.cpp  DestructOperator.cpp  DynamicAllocation.cpp  DynamicCasting.cpp  DynamicNameOperator.cpp  FileTestCasesRunner.cpp  FileTestCasesRunner.hpp  FunctionOverloading.cpp  FunctionReference.cpp  Functions.cpp  GenericClasses.cpp  GenericFunctions.cpp  Heap.cpp  IfExpressions.cpp  IfStatements.cpp  InfiniteLoops.cpp  InfixOperators.cpp  Inheritance.cpp  IsTypeOperator.cpp  Loops.cpp  MoveOperator.cpp  NoRefOperator.cpp  OffsetOfOperator.cpp  PostfixOperators.cpp  Preprocessor.cpp  PriorityQueue.cpp  Scopes.cpp  SetVtableOperator.cpp  SizeOfOperator.cpp  String.cpp  (+13 more)
(+93 files in other folders)
