cmake_minimum_required(VERSION 3.26)
project(Tests)

set(CMAKE_CXX_STANDARD 17)

set(TEST_LIBS gtest_main DUA_LIB ${DUA_PREREQUISITE_LIBS})

macro (define_test name)
    add_executable(${name} ${name}.cpp FileTestCasesRunner.cpp)
    target_link_libraries(${name} ${TEST_LIBS})
    add_test(NAME ${name} COMMAND ${name})
endmacro ()

define_test(WhenExpressions)
define_test(IfExpressions)
define_test(IfStatements)
define_test(Functions)
define_test(Loops)
define_test(BlockExpression)
define_test(Types)
define_test(Variables)
define_test(ClassDefinition)
define_test(ClassConstruction)
define_test(TypeInference)
define_test(SizeOfOperator)
define_test(TypeOfOperator)
define_test(TypeNameOperator)
define_test(FunctionReference)
define_test(Arrays)
define_test(DynamicAllocation)
define_test(Preprocessor)
define_test(FunctionOverloading)
define_test(TypeOperations)
define_test(Casting)
define_test(Copying)
define_test(InfixOperators)
define_test(InfiniteLoops)
define_test(Scopes)
define_test(TypeAlias)
define_test(GenericFunctions)
define_test(GenericClasses)
define_test(IsTypeOperator)
define_test(NoRefOperator)
define_test(PostfixOperators)
define_test(Inheritance)
define_test(DynamicNameOperator)
define_test(DynamicCasting)
define_test(Vector)
define_test(String)
define_test(TempObjects)
define_test(MoveOperator)
define_test(OffsetOfOperator)
define_test(Algorithms)
define_test(PriorityQueue)
define_test(TeleportOperator)
define_test(ConstructOperator)
